[tool.poetry]
name = "teaching-toolshed"
version = "0.1.2"
description = "Helpful libraries for running classes"
authors = ["Hunter Schafer <hschafer@uw.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "teachingtoolshed"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
