[tool.poetry]
name = "teaching-toolshed"
version = "0.2.8"
description = "Helpful libraries for running classes"
authors = ["Hunter Schafer <hschafer@uw.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "teachingtoolshed"}]
repository = "https://github.com/hschafer/teaching-toolshed"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^2.1.0"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
